--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>kevin' home page</title>
-    <scrpt>
+    <script>
        alert('hello, everyone!');
     </script>
   </head>
