--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
        alert('hello, everyone!');
     </script>
   </head>
+  <body>
+    <input type = "button" text="点击" onclick="alert('hello')">
+  </body>
 
 </html>
