--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
   <head>
     <title>kevin' home page</title>
     <script>
-       alert('hello, everyone!');
+       // alert('hello, everyone!');
     </script>
   </head>
   <body>
-    <input type = "button" text="点击" onclick="alert('hello')">
+    <button onclick="copyText()">请点击</button>
   </body>
 
 </html>
