--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </script>
   </head>
   <body>
-    <button onclick="copyText()">请点击</button>
+    <button onclick="alert('success')">请点击</button>
   </body>
 
 </html>
